--- a/elasticsearch/service.yml
+++ b/elasticsearch/service.yml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: elasticsearch-master
+  name: elasticsearch
   labels:
     role: backend 
     infras: s8
@@ -10,38 +10,71 @@ spec:
   ports:
   - name: transport
     port: 9300
+  - name: http
+    port: 9200
   selector:
     app: elasticsearch
-    role: elasticsearch-master
+    role: elasticsearch
+# ---
+# apiVersion: v1
+# kind: Service
+# metadata:
+#   name: elasticsearch-master
+#   labels:
+#     role: backend 
+#     infras: s8
+# spec:
+#   ports:
+#   - name: transport
+#     port: 9300
+#   selector:
+#     app: elasticsearch
+#     role: elasticsearch-master
+# ---
+# apiVersion: v1
+# kind: Service
+# metadata:
+#   name: elasticsearch-client
+#   labels:
+#     role: backend
+#     infra: s8
+# spec:
+#   ports:
+#   - name: http
+#     port: 9200
+#   - name: transport
+#     port: 9300
+#   selector:
+#     app: elasticsearch
+#     role: elasticsearch-client
+# ---
+# apiVersion: v1
+# kind: Service
+# metadata:
+#   name: elasticsearch-data
+#   labels:
+#     role: backend 
+#     infras: s8
+# spec:
+#   ports:
+#   - name: transport
+#     port: 9300
+#   selector:
+#     app: elasticsearch
+#     role: elasticsearch-data
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: elasticsearch-client
+  name: cerebro
   labels:
-    role: backend
-    infra: s8
+    role: backend 
+    infras: s8
 spec:
   ports:
   - name: http
-    port: 9200
-  - name: transport
-    port: 9300
+    port: 9000
+    targetPort: cerebro-http
   selector:
     app: elasticsearch
-    role: elasticsearch-client
----
-apiVersion: v1
-kind: Service
-metadata:
-  name: elasticsearch-data
-  labels:
-    role: backend 
-    infras: s8
-spec:
-  ports:
-  - name: transport
-    port: 9300
-  selector:
-    app: elasticsearch
-    role: elasticsearch-data
+    role: cerebro
