--- a/drone/ingress.yml
+++ b/drone/ingress.yml
@@ -2,13 +2,14 @@ apiVersion: extensions/v1beta1
 kind: Ingress
 metadata:
   name: drone
-  annotations:
-    kubernetes.io/ingress.class: "traefik"
+  namespace: drone
+  # annotations:
+  #   kubernetes.io/ingress.class: "traefik"
 spec:
   rules:
-  - host: drone.leangeder.eu
+  - host: drone.beamery.com
     http:
       paths:
       - backend:
-          serviceName: drone-service
+          serviceName: drone-ui
           servicePort: http
