--- a/drone/service.yml
+++ b/drone/service.yml
@@ -1,19 +1,30 @@
+---
 apiVersion: v1
 kind: Service
 metadata:
-  name: drone-service
-  # namespace: drone
+  name: drone
+  namespace: drone
 spec:
-  # type: LoadBalancer
-  # # type: NodePort
   ports:
   - name: http
-    protocol: TCP
     port: 80
     targetPort: 8000
   - name: grpc
-    protocol: TCP
     port: 9000
-    targetPort: 9000
   selector:
     app: drone-server
+# ---
+# apiVersion: v1
+# kind: Service
+# metadata:
+#   name: drone-ui
+#   namespace: drone
+# spec:
+#   type: LoadBalancer
+#   ports:
+#   - name: http
+#     protocol: TCP
+#     port: 80
+#     targetPort: 8000
+#   selector:
+#     app: drone-server
