--- a/lb/scaleup.yml
+++ b/lb/scaleup.yml
@@ -1,17 +1,17 @@
-apiVersion: autoscaling/v1
-kind: HorizontalPodAutoscaler
-metadata:
-  name: traefik
-  namespace: kube-system
-  labels:
-    app: traefik
-    role: lb
-    infra: s8
-spec:
-  scaleTargetRef:
-    apiVersion: apps/v1beta1
-    kind: Deployment
-    name: traefik-ingress-controller
-  minReplicas: 2
-  maxReplicas: 4
-  targetCPUUtilizationPercentage: 80
+# apiVersion: autoscaling/v1
+# kind: HorizontalPodAutoscaler
+# metadata:
+#   name: traefik
+#   namespace: kube-system
+#   labels:
+#     app: traefik
+#     role: lb
+#     infra: s8
+# spec:
+#   scaleTargetRef:
+#     apiVersion: apps/v1beta1
+#     kind: Deployment
+#     name: traefik-ingress-controller
+#   minReplicas: 2
+#   maxReplicas: 4
+#   targetCPUUtilizationPercentage: 80
