--- a/lb/service.yml
+++ b/lb/service.yml
@@ -1,21 +1,3 @@
-# ---
-# apiVersion: v1
-# kind: Service
-# metadata:
-#   name: traefik
-#   namespace: kube-system
-#   labels:
-#     k8s-app: traefik-ingress-lb
-# spec:
-#   ports:
-#   - port: 80
-#     name: http
-#   - port: 443
-#     name: https
-#   externalIPs:
-#   - 62.210.14.17
-#   selector:
-#     k8s-app: traefik-ingress-lb
 ---
 apiVersion: v1
 kind: Service
@@ -25,11 +7,14 @@ metadata:
   labels:
     k8s-app: traefik-ingress-lb
 spec:
+  # type: LoadBalancer
   ports:
   - name: http
     port: 80
   - name: https
     port: 443
+#   externalIPs:
+#   - 62.210.14.17
   selector:
     k8s-app: traefik-ingress-lb
 ---
