--- a/lb/deploy.yml
+++ b/lb/deploy.yml
@@ -21,7 +21,7 @@ spec:
         name: traefik-ingress-lb
     spec:
       serviceAccountName: traefik-ingress-controller
-      terminationGracePeriodSeconds: 60
+      # terminationGracePeriodSeconds: 60
       # hostNetwork: true
       containers:
       - name: traefik-ingress-lb
